--- a/index.html
+++ b/index.html
@@ -14,33 +14,10 @@ Plots a real-time updating line graph. -->
     <div class="navbar"><span>Swarthmore Meal Plan Tracker</span></div>
     <div class="wrapper">
         <div id="chart"></div>
-        <script>
-            function getData() {
-                return Math.random();
-            }
-            // create line chart
-            Plotly.plot('chart',[{
-                y:[getData()], // pass array
-                type:'line'
-            }]);
-
-            // automatically retrieve next data point
-            var cnt = 0;
-            setInterval(function(){
-                // extend chart with new datapoints
-                Plotly.extendTraces('chart',{ y:[[getData()]]}, [0]);
-                // slide chart along with new data
-                cnt++;
-                // start sliding chart after 500 data points
-                if(cnt > 500) {
-                    Plotly.relayout('chart',{
-                        xaxis: {
-                            range: [cnt-500,cnt] // redefine x-axis range
-                        }
-                    });
-                }
-            },150); // chart updating frequency
-        </script>
+        <div id="myDiv"></div>
     </div>
     </body>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://d3js.org/d3-queue.v3.min.js"></script>
+    <script src="main.js"></script>
 </html>
