refactor JS code, add swat points

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@ Plots a real-time updating line graph. -->
     </head>
     <body>
     <div class="navbar"><span>Swarthmore Meal Plan Tracker</span></div>
+    <h1>Spending History: September 1, 2019-Present</h1>
     <div class="wrapper">
-        <div id="chart"></div>
-        <div id="myDiv"></div>
+        <div id="Dining Dollars"></div>
+        <div id="Swat Points"></div>
+        <div id="Meal Swipes"></div>
     </div>
     </body>
     <script src="https://d3js.org/d3.v5.min.js"></script>
